# ros-lab

ros2_ws_Akshaj/: frames_2025-02-11_14.37.06.gv  frames_2025-02-11_14.39.15.gv  frames_2025-02-11_14.41.45.gv
ros2_ws_Akshaj/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws_Akshaj/install/action_test/lib/action_test/: fibonacci_action_client  fibonacci_action_server
ros2_ws_Akshaj/install/action_test/share/action_test/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws_Akshaj/install/action_tutorials_interfaces/share/action_tutorials_interfaces/: package.sh
ros2_ws_Akshaj/install/action_tutorials_interfaces/share/action_tutorials_interfaces/action/: PrimeNumbers.idl
ros2_ws_Akshaj/install/assingment7/share/assingment7/: package.dsv  package.ps1  package.sh
ros2_ws_Akshaj/install/assingment7/share/assingment7/urdf/: four_wheel.xacro
ros2_ws_Akshaj/install/client_pkg/share/client_pkg/: package.sh  package.xml
ros2_ws_Akshaj/install/custom_service_test/lib/custom_service_test/: custom_service  turtle_client  turtle_server
ros2_ws_Akshaj/install/custom_service_test/share/custom_service_test/: package.bash  package.ps1  package.sh  package.zsh
ros2_ws_Akshaj/install/exp3/share/exp3/: package.sh  package.xml  package.zsh
ros2_ws_Akshaj/install/experiment_interfaces/share/experiment_interfaces/: local_setup.sh  package.sh
ros2_ws_Akshaj/install/experiment_interfaces/share/experiment_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
ros2_ws_Akshaj/install/mobile_robot_description/share/mobile_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
ros2_ws_Akshaj/install/my_package/lib/my_package/: turtle_controller  turtle_controller2
ros2_ws_Akshaj/install/my_package/share/my_package/: package.sh  package.xml
ros2_ws_Akshaj/install/new_code_py/share/new_code_py/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws_Akshaj/install/prime_generator/lib/prime_generator/: prime_client  prime_server
ros2_ws_Akshaj/install/prime_generator/share/prime_generator/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws_Akshaj/install/urdfbot_description/share/urdfbot_description/: package.sh
ros2_ws_Akshaj/log/: latest_build  latest_list
ros2_ws_Akshaj/src/action_test/: setup.py
ros2_ws_Akshaj/src/action_tutorials_interfaces/: CMakeLists.txt
ros2_ws_Akshaj/src/action_tutorials_interfaces/action/: PrimeNumbers.action
ros2_ws_Akshaj/src/custom_service_test/: package.xml  setup.cfg  setup.py
ros2_ws_Akshaj/src/custom_service_test/custom_service_test/: custom_service.py  turtle_client.py
ros2_ws_Akshaj/src/exp3/: setup.cfg  setup.py
ros2_ws_Akshaj/src/exp3/exp3/: subscriber.py
ros2_ws_Akshaj/src/exp3/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws_Akshaj/src/exp3/log/: latest_build
ros2_ws_Akshaj/src/experiment_interfaces/: CMakeLists.txt
ros2_ws_Akshaj/src/experiment_interfaces/srv/: TurtleControl.srv
ros2_ws_Akshaj/src/install/: local_setup.sh  setup.sh
ros2_ws_Akshaj/src/log/: latest_build
ros2_ws_Akshaj/src/mobile_robot_description/: CMakeLists.txt  package.xml
ros2_ws_Akshaj/src/mobile_robot_description/config/: urdf.rviz
ros2_ws_Akshaj/src/mobile_robot_description/launch/: display.launch.py
ros2_ws_Akshaj/src/mobile_robot_description/urdf/: mobile_robot.urdf.xacro
ros2_ws_Akshaj/src/my_package/: setup.py
ros2_ws_Akshaj/src/my_package/my_package/: draw_circle.py  turtle_controller.py  turtle_controller2.py
ros2_ws_Akshaj/src/new_package/main_node_interfaces/: CMakeLists.txt  package.xml
ros2_ws_Akshaj/src/new_package/new_code_py/new_code_py/: fibonacci_action_client.py
ros2_ws_Akshaj/src/prime_generator/: setup.cfg  setup.py
ros2_ws_Akshaj/src/ros2_ws_exp4/install/: local_setup.sh  setup.sh
ros2_ws_Akshaj/src/ros2_ws_exp4/log/: latest_build
ros2_ws_Akshaj/src/ros2_ws_exp4/src/install/: local_setup.sh  setup.sh
ros2_ws_Akshaj/src/ros2_ws_exp4/src/log/: latest_build
ros2_ws_Akshaj/src/urdfbot_description/: CMakeLists.txt
ros2_ws_Akshaj/src/urdfbot_description/launch/: show.launch.xml
ros2_ws_exp4/install/: setup.sh
ros2_ws_exp4/install/client_pkg/share/client_pkg/: package.sh
ros2_ws_exp4/src/client_pkg/: setup.py
ros2_ws_exp4/src/client_pkg/client_pkg/launch/: call_client.launch.py
(+104 files in other folders)
